...
        headerTitle = "Sign Up";
        break;
      case "expired":
        headerTitle = "Home Page";
        break;
      case "schedule":
        headerTitle = "Schedule";
        break;
      case "index":
      default:
        headerTitle = "Home Page";
    }
  }
...
