...
      classIdx,
    })),
  );

  return (
    <BottomSheetScrollView contentContainerStyle={styles.container}>
      <Text style={styles.title}>Upcoming Classes</Text>

      <View style={styles.list}>
        {allClasses.map(({ courseName, classItem, courseIdx, classIdx }, index) => {
          const backgroundColor =
            index % 2 === 0 ? COLORS.maroon : COLORS.selectionBlue;

...
