...
          */}
          <TouchableOpacity
            onPress={() =>
              router.push({ pathname: "/login", params: { prev: "index" } })
            }
            style={[styles.button, styles.primaryButton]}
            testID="signin-signup-button"
          >
            <View style={styles.buttonContent}>
              <View style={[styles.iconCircle, styles.iconCirclePrimaryButton]}>
                <AccountIcon size={35} color={COLORS.maroon} />
              </View>
              <View style={styles.buttonTextContainer}>
...
