appId: host.exp.Exponent
---

# 1) Open app and navigation to sign up
- launchApp
- tapOn: "frontend"
- tapOn:
    id: "signin-signup-button"
- tapOn: "Sign up"
- assertVisible: "Create an account!"

# Test A — submit empty form (validation)
- tapOn:
    id: "signup-button"
- assertVisible: "Email is required."

# Test B — invalid email
- tapOn:
    id: "fullname-input"
- inputText: "Test User"
- tapOn:
    id: "email-input"
- inputText: "@gmail.com"

- scroll

- tapOn:
    id: "password-input"
- inputText: "password123"
- scroll
- tapOn:
    id: "confirm-password-input"
- inputText: "password123"

- tapOn:
    id: "signup-button"
- tapOn:
    id: "signup-button"

# Expect an error telling the user to use an email in the format content@content.content
- assertVisible: "Please use an email in the format content@content.content"

# Test C — valid registration
- launchApp
- tapOn: "frontend"
- tapOn:
    id: "signin-signup-button"
- tapOn: "Sign up"

- tapOn:
    id: "fullname-input"
- inputText: "Test User"

- tapOn:
    id: "email-input"
- inputText: "test.user@live.concordia.ca"

- scroll

- tapOn:
    id: "password-input"
- inputText: "ValidPass123"
- scroll

- tapOn:
    id: "confirm-password-input"
- inputText: "ValidPass123"

- scroll

- hideKeyboard
- tapOn:
    id: "signup-button"

# If registration completes successfuly
- assertVisible: "Registration successful! Please log in."
